@@ -1,45 +1,37 @@
 package Grid;
 
 import DataStructures.GeoLocation;
-import DataStructures.Graph;
 import lombok.Data;
-
 import java.util.*;
 
 @Data
-public class GridIndex<KVertex> {
-    private List<List<KVertex>> grid;
+public class GridIndex<K> {
+    private List<List<Map.Entry<K,GeoLocation>>> grid;
     private List<Double> vertical;
     private List<Double> horizontal;
-    private HashMap<KVertex, GeoLocation> vertices;
-
     private boolean splitVertically = true;
-    private final double OFFSET = 5.0;
 
     public GridIndex() {
+        this.grid = new ArrayList<>();
         this.vertical = new ArrayList<>();
         this.horizontal = new ArrayList<>();
-        this.grid = new ArrayList<>();
-        this.vertices = new HashMap<>();
+
+        //Vložení hranic - min,max
+        vertical.addFirst(0.0);
+        vertical.addLast(70.0);
+        horizontal.addFirst(0.0);
+        horizontal.addLast(70.0);
     }
 
-    public void add(KVertex v,Double latitude, Double longitude) {
-        vertices.put(v, new GeoLocation(latitude, longitude));
+    public void add(K v, Double latitude, Double longitude){
+        findSpaceInGrid(v, new GeoLocation(latitude, longitude));
     }
 
-    public void createGrid() {
-        vertical.add(Collections.min(vertices.values(), Comparator.comparingDouble(GeoLocation::getLatitude)).getLatitude() - OFFSET);
-        vertical.add(Collections.max(vertices.values(), Comparator.comparingDouble(GeoLocation::getLatitude)).getLatitude() + OFFSET);
-        horizontal.add(Collections.min(vertices.values(), Comparator.comparingDouble(GeoLocation::getLongitude)).getLongitude() - OFFSET);
-        horizontal.add(Collections.max(vertices.values(), Comparator.comparingDouble(GeoLocation::getLongitude)).getLongitude() + OFFSET);
-
-        vertices.forEach(this::findSpaceInGrid);
-    }
-
-    private void findSpaceInGrid(KVertex key, GeoLocation location) {
+    private void findSpaceInGrid(K key, GeoLocation location){
         int row = -1;
         int col = -1;
 
+        //Hledání pozice - vertical
         for (int i = 0; i < vertical.size() - 1; i++) {
             if (location.getLatitude() >= vertical.get(i) && location.getLatitude() <= vertical.get(i + 1)) {
                 row = i;
@@ -47,6 +39,7 @@ public class GridIndex<KVertex> {
             }
         }
 
+        //Hledání pozice - horizontal
         for (int j = 0; j < horizontal.size() - 1; j++) {
             if (location.getLongitude() >= horizontal.get(j) && location.getLongitude() <= horizontal.get(j + 1)) {
                 col = j;
@@ -57,78 +50,88 @@ public class GridIndex<KVertex> {
         while (grid.size() <= row) {
             grid.add(new ArrayList<>());
         }
-
         while (grid.get(row).size() <= col) {
             grid.get(row).add(null);
         }
 
         if (grid.get(row).get(col) != null) {
-            System.out.println("Kolize v buňce na pozici [" + row + ", " + col + "]. Rozděluji...");
 
-            KVertex existing = grid.get(row).get(col);
-            grid.get(row).set(col, null); // Odstraníme původní prvek
+            Map.Entry<K,GeoLocation> existing = grid.get(row).get(col);
 
-            if (vertices.get(existing).getLatitude()== vertices.get(key).getLatitude() && vertices.get(existing).getLongitude()== vertices.get(key).getLongitude()) {
-                System.out.println("stejný prvek?!");
-                grid.get(row).set(col, existing);
-                grid.get(row).set(col, key);
+            if (existing.getValue().getLatitude() == location.getLatitude() && existing.getValue().getLongitude() == location.getLongitude()) {
+                System.out.println("Duplicitní bod");
                 return;
             }
-            else if (!splitVertically && vertices.get(existing).getLongitude() != vertices.get(key).getLongitude() ||
-                    vertices.get(existing).getLatitude() == vertices.get(key).getLatitude()) {
-                // Rozdělení vodorovně
-                double midLong = (vertices.get(existing).getLongitude() + vertices.get(key).getLongitude()) / 2;
+
+            grid.get(row).set(col, null);
+
+            if (!splitVertically && existing.getValue().getLongitude() != location.getLongitude() ||
+                    existing.getValue().getLatitude() == location.getLatitude()) {
+                double midLong = (existing.getValue().getLongitude() + location.getLongitude()) / 2;
                 if (!horizontal.contains(midLong)) {
-                    horizontal.add(col + 1, midLong); // Přidáme na konkrétní index
+                    horizontal.add(col + 1, midLong);
                 }
-            }else if (splitVertically && vertices.get(existing).getLatitude() != vertices.get(key).getLatitude()
-            || vertices.get(existing).getLongitude() == vertices.get(key).getLongitude()) {
-                // Rozdělení svisle
-                double midLat = (vertices.get(existing).getLatitude() + vertices.get(key).getLatitude()) / 2;
+            //vertikální split
+            }else if (splitVertically && existing.getValue().getLatitude() != location.getLatitude()
+            || existing.getValue().getLongitude() == location.getLongitude()) {
+                double midLat = (existing.getValue().getLatitude() + location.getLatitude()) / 2;
                 if (!vertical.contains(midLat)) {
-                    vertical.add(row + 1, midLat); // Přidáme na konkrétní index
+                    vertical.add(row + 1, midLat);
                 }
             }
 
-            // Přepni způsob dělení pro příští rozdělení
             splitVertically = !splitVertically;
 
-            // Znovu vložíme oba vrcholy do podmřížky
-            findSpaceInGrid(existing,vertices.get(existing));
-            findSpaceInGrid(key,vertices.get(key));
+            findSpaceInGrid(existing.getKey(),existing.getValue());
+            findSpaceInGrid(key,location);
         } else {
-            // Pokud je buňka prázdná, vložíme prvek
-            grid.get(row).set(col, key);
-            System.out.println("Vloženo do gridu na pozici [" + row + ", " + col + "]: " + key);
+            grid.get(row).set(col, Map.entry(key,location));
         }
     }
 
+    public List<K> findRange(GeoLocation start, GeoLocation end) {
+        List<K> outputList = new ArrayList<>();
 
+        int rowStart = -1;
+        int colStart = -1;
+        int rowEnd = -1;
+        int colEnd = -1;
 
-    public List<KVertex> findRange(GeoLocation start, GeoLocation end) {
-        List<KVertex> outputList = new ArrayList<>();
-        for (int i = 0; i < grid.size(); i++) {
-            for (int j = 0; j < grid.get(i).size(); j++) {
-                KVertex key = grid.get(i).get(j);
-                if (key != null) {
-                    GeoLocation location = vertices.get(key);
-                    if (location.getLatitude() >= start.getLatitude() &&
-                            location.getLatitude() <= end.getLatitude() &&
-                            location.getLongitude() >= start.getLongitude() &&
-                            location.getLongitude() <= end.getLongitude()) {
-                        outputList.add(key);
-                    }
+        for (int i = 0; i < vertical.size() - 1; i++) {
+            if (start.getLatitude() >= vertical.get(i) && start.getLatitude() < vertical.get(i + 1)) {
+                rowStart = i;
+            }
+            if (end.getLatitude() >= vertical.get(i) && end.getLatitude() < vertical.get(i + 1)) {
+                rowEnd = i;
+            }
+        }
+
+        for (int j = 0; j < horizontal.size() - 1; j++) {
+            if (start.getLongitude() >= horizontal.get(j) && start.getLongitude() < horizontal.get(j + 1)) {
+                colStart = j;
+            }
+            if (end.getLongitude() >= horizontal.get(j) && end.getLongitude() < horizontal.get(j + 1)) {
+                colEnd = j;
+            }
+        }
+
+        if (rowStart == -1 || colStart == -1 || rowEnd == -1 || colEnd == -1) {
+            return outputList;
+        }
+
+        for (int i = rowStart; i <= rowEnd; i++) {
+            for (int j = colStart; j <= colEnd; j++) {
+                if (i < grid.size() && j < grid.get(i).size() && grid.get(i).get(j) != null) {
+                        outputList.add(grid.get(i).get(j).getKey());
                 }
             }
         }
+
         return outputList;
     }
 
-    public KVertex findPoint(GeoLocation location) {
-        List<KVertex> result = findRange(location, location);
-        if (result.size() > 1) {
-            System.out.println("Více prvků na stejné pozici: " + result.size());
-        }
-        return result.isEmpty() ? null : result.get(0);
+    public K findPoint(GeoLocation location) {
+        List<K> result = findRange(location, location);
+        return result.isEmpty() ? null : result.getFirst();
     }
 }
